# paymo

./: .gitignore  README.md  main.py  pyproject.toml
gateway/: .env  main.py  pyproject.toml
gateway/config/: tortoise.py
gateway/config/settings/: base.py
gateway/dependencies/: __init__.py
gateway/enums/: index.py
gateway/migrations/developer/wise_models/: 2_20260117103316_None.py
gateway/models/: wise.py
gateway/routes/: __init__.py
gateway/routes/internal/: currencycloud.py
gateway/schemas/: accounts.py  collections.py  conversion.py  funding.py  fx.py  payments.py
gateway/scripts/: aerich_manage.py
gateway/services/currencycloud/: client.py
paymo/: account2.html  card1.html  dash.html  support.html  trans3.html  wallet1.html
wise/: .env.sample  .gitignore  DASHBOARD.md  LANDING_PAGE.md  README.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  rav.yaml
wise/apps/: urls.py
wise/apps/dashboard/: urls.py  views.py
wise/apps/payments/: admin.py  urls.py
wise/apps/payments/migrations/: 0001_initial.py
wise/config/: api_router.py  urls.py
wise/config/settings/: base.py  local.py  production.py  security.py
wise/ifidel/users/: adapters.py  admin.py  models.py  views.py
wise/static/css/: landing.css
wise/static/js/: auth.js
wise/static/sass/: auth.scss  custom_bootstrap_vars.scss  dashboard.scss  project.scss
wise/templates/: base.html
wise/templates/account/: base_manage_password.html  login.html  signup.html
wise/templates/pages/: base.html  home.html  transactions.html
wise/webpack/: common.config.js
(+25 files in other folders)
