[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "aerich>=0.9.1",
    "aioredis>=2.0.1",
    "argon2-cffi>=25.1.0",
    "python-jose[cryptography]>=3.5.0",
    "tortoise-orm>=0.25.1",
    "asyncpg>=0.31.0",
    "tomlkit>=0.14.0",
    "tomli-w>=1.2.0",
]

[tool.aerich]
tortoise_orm = "config.tortoise.TORTOISE_ORM"
location = "migrations/wise"
src_folder = "./."
